<resources>
    <string name="app_name">SocialMedia</string>
    <string name="description_home_icon">home icon used to access your profile</string>
    <string name="profile_pic_circle">This is where the profile pic is placed</string>
    <string name="title_activity_profile_and_settings">ProfileAndSettings</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="text_under_the_sign_in_or_register_button">or use</string>
    <string name="error_user_already_signed_up">The email address is already in use by another account.</string>

    <string name="gender_prompt">Gender</string>

    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="counties_array">
        <item>USA</item>
        <item>CANADA</item>
        <item>INDIA</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_placement_mock">Whats this about?</string>


</resources>
