<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp"
    tools:context=".Activities.RegisterOrSignInActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"

        android:layout_marginEnd="24dp"

        android:background="@drawable/round_register_button"
        android:drawableStart="@drawable/envelope"
        android:drawablePadding="10dp"

        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/buttonTextColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyImageView" />

    <EditText
        android:id="@+id/password"

        android:layout_width="0dp"

        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_register_button"

        android:drawableStart="@drawable/key"

        android:drawablePadding="10dp"
        android:hint="@string/prompt_password"

        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="10dp"

        android:selectAllOnFocus="true"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/signInRegisterButton"

        android:background="@drawable/round_register_button"
        android:padding="20dp"
        android:text="@string/action_sign_in"
        android:textColor="@color/buttonTextColor"

        android:onClick="checkLog"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.144"

        />


    <ImageView
        android:id="@+id/companyImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="93dp"
        android:background="@drawable/logofinal"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/socialMediaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="170dp"
        android:textColor="@color/subTextColor"
        android:text="@string/text_under_the_sign_in_or_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInRegisterButton" />

    <ImageButton
        android:id="@+id/facebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:background="@android:color/transparent"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialMediaText"
        android:contentDescription="@string/todo"/>

    <ImageButton
        android:id="@+id/googleButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"

        android:background="@android:color/transparent"
        android:src="@drawable/google"

        android:onClick="GoogleSignIn"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialMediaText"
        android:contentDescription="@string/todo"
        />

</androidx.constraintlayout.widget.ConstraintLayout>